# moshimac

./: .gitignore  .gitmodules  DEVELOPMENT.md  JOURNEY.md  LICENSE  Makefile  Package.swift  QUICK_START.md  README.md  RUSTYMIMI_INTEGRATION.md  XCODE_SETUP.md  create_app.sh
Sources/MoshiMac/App/: AppDelegate.swift
Sources/MoshiMac/Core/: ASREngine.swift  ModelManager.swift  RecordingSession.swift  STTEngine.swift
Sources/MoshiMac/Input/: HotkeyManager.swift
Sources/MoshiMac/Output/: TextInserter.swift
Sources/MoshiMac/Resources/: AppIcon.icns
Sources/MoshiMac/Resources/lib/: librustymimi_c.dylib
Sources/MoshiMac/UI/: RecordingOverlay.swift  SettingsWindow.swift
Tests/MoshiMacTests/: MoshiMacTests.swift
rustymimi-c/: Cargo.toml  cbindgen.toml
rustymimi-c/src/: lib.rs
