[package]
name = "rustymimi-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
moshi = { path = "/tmp/moshi-repo/rust/moshi-core" }
candle = { version = "0.9.1", package = "candle-core" }
candle-nn = "0.9.1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
